Fix overly thin scrollbars in firefox

--- a/packages/builder/src/global.css
+++ b/packages/builder/src/global.css
@@ -70,7 +70,6 @@ a {
   background: var(--spectrum-alias-background-color-default);
 }
 html * {
-  scrollbar-width: thin;
   scrollbar-color: var(--spectrum-global-color-gray-400)
     var(--spectrum-alias-background-color-default);
 }
